Overflow Fix

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -12,7 +12,7 @@ main {
 }
 
 #large-title {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	margin-left: -3vw;
 	font-weight: 900;
@@ -20,6 +20,7 @@ main {
 }
 
 .project-info {
+	position: fixed;
 	margin-top: 10vh;
 	margin-left: 50px;
 	width: 100%;
